// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with additional style properties 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "bold",
        "letterSpacing": -0.15,
      },
    ]
  }
>
  bold text
</Text>
`;

exports[`renders with the default properties for iOS 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
    ]
  }
>
  normal text
</Text>
`;

exports[`supports multiple nested strings 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "red",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "red",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        undefined,
      ]
    }
  >
    red normal text 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "red",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        undefined,
      ]
    }
  >
    and red normal text
  </Text>
</Text>
`;

exports[`supports nested styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "bold",
        "letterSpacing": -0.15,
      },
    ]
  }
>
  bold text 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#30363d",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": -0.15,
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    and bold-red text
  </Text>
</Text>
`;

exports[`works applies the styles recursively 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "bold",
        "letterSpacing": -0.15,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#30363d",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": -0.15,
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    bold and red text
  </Text>
</Text>
`;

exports[`works even with the distant Text nodes 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "bold",
        "letterSpacing": -0.15,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#30363d",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": -0.15,
        },
        undefined,
      ]
    }
  >
    bold default text
  </Text>
</Text>
`;

exports[`works with nullable child 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "color": "#30363d",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
    ]
  }
>
  default
   
   
  default
   
   
  default
</Text>
`;
